Add complete logging